# cudahandbook

./: .gitignore  CMakeLists.txt
SMs/: CMakeLists.txt  divergence.cu  float_to_float16.cu  solveQuadratic.cu  testFunnelShift.cu  testShuffle.cu
atomics/: README.txt  atomic32.cu  atomic32Shared.cu  atomic64.cu  atomic64Shared.cu  atomicFloat.cu  atomicFloatShared.cu
chLib/: CMakeLists.txt  chAssert.h  chCUDA.h  chCommandLine.h  chDrv.h  chError.h  chError_cuda.h  chError_hip.h  chNUMA.h  chShmoo.h  chThread.h  chThread_Linux.h  chThread_POSIX.h  chThread_Win32.h  chTimer.h  chUtil.h  ch_conio.h  pgm.cu  range.hpp
concurrency/: AddKernel.cuh  CMakeLists.txt  TimeConcurrentKernelKernel.cuh  TimeConcurrentKernelMapped.cuh  TimeConcurrentMemcpyKernel.cuh  TimeSequentialKernelKernel.cuh  TimeSequentialMemcpyKernel.cuh  TimeSequentialMemcpyKernelMapped.cuh  breakevenDtoHMemcpy.cu  breakevenHtoDMemcpy.cu  breakevenKernelAsync.cu  concurrencyKernelKernel.cu  concurrencyKernelMapped.cu  concurrencyMemcpyKernel.cu  concurrencyMemcpyKernelMapped.cu  cudaGetLastErrorIsAsynchronous.cu  eventRecord.cu  managedOverhead.cu  memcpy16.cpp  nullDtoHMemcpyAsync.cu  nullDtoHMemcpySync.cu  nullHtoDMemcpyAsync.cu  nullKernelAsync.cu  nullKernelAsyncGraph.cu  nullKernelSync.cu  pageableMemcpyHtoD.cu  pageableMemcpyHtoD16.cu  pageableMemcpyHtoD16Blocking.cu  pageableMemcpyHtoD16Broken.cu  pageableMemcpyHtoD16Synchronous.cu  peer2peerMemcpy.cu  waitKernelAsync.cu  win32NullKernelStreamCallback.cu
corr/: CMakeLists.txt  coins.pgm  corrShared.cuh  corrShared4.cuh  corrShared4Dp4a.cuh  corrShared4Dp4aIlp.cuh  corrShared4Dp4aSums.cuh  corrShared4Sums.cuh  corrSharedSM.cuh  corrSharedSMSums.cuh  corrSharedSums.cuh  corrTexConstant.cuh  corrTexConstantSums.cuh  corrTexTex.cuh  corrTexTexSums.cuh  normalizedCrossCorrelation.cu  pgm.cu  pgm.h
driverAPI/: chDrv.cpp  init.cpp  saxpy.cu  saxpyDrv.cpp
histogram/: CMakeLists.txt  histogram.cu  histogramNPP.cuh  histogramNaiveAtomic.cuh  histogramPerBlock.cuh  histogramPerBlockOffset.cuh  histogramPerBlockReduce.cuh  histogramPerGrid.cuh  histogramPerThread4x32.cuh  histogramPerThread4x64.cuh  histogramPerThread64.cuh  histogramPrivatized8.cuh  histogramPrivatized8Pitch.cuh  histogramPrivatizedPerBlock.cuh  histogramPrivatizedPerBlockOffset.cuh  histogramPrivatizedPerBlockPCache.cuh  histogramPrivatizedPerBlockPCache2.cuh  histogramPrivatizedPerBlockReduce.cuh  histogramPrivatizedPerThread.cuh  histogramPrivatizedPerThread32.cuh  histogramPrivatizedPerThread32Unroll.cuh  histogramPrivatizedPerThread4x32.cuh  histogramPrivatizedPerThread4x33.cuh  histogramSharedAtomic.cuh  histogramSharedAtomicPCache.cuh  histogramSharedAtomicPCache2.cuh  histogramSharedAtomicReduce.cuh  histogramSharedPrivatized.cuh  histogramSharedPrivatized32.cuh
memory/: AOStoSOA.cu  AOStoSOA_1.cuh  AOStoSOA_2.cuh  CMakeLists.txt  globalCopy.cu  globalCopy2.cu  globalRead.cu  globalReadTex.cu  globalWrite.cu  linuxGPULoad.cu  peer2peerMemcpy.cu  peer2peerMemcpyDrv.cu  peer2peerTestNUMA.cu  pinnedBandwidth.cu  spinlockReduction.cu  win32GPULoad.cu
microbench/: CMakeLists.txt  devrtMallocSpeed.cu  globalCopy.cu  globalRead.cu  globalWrite.cu  mallocSpeed.cu  reportClocks.cu  spinlockReduction.cu
nbody/: .gitignore  CMakeLists.txt  GNUmakefile  Vector.hpp  bodybodyInteraction.cuh  bodybodyInteraction_AltiVec.h  bodybodyInteraction_NEON.h  bodybodyInteraction_SSE.h  collisions.cu  kahan.h  nbody.cu  nbody.h  nbody_CPU_AOS.cpp  nbody_CPU_AOS.h  nbody_CPU_AOS_tiled.cpp  nbody_CPU_AOS_tiled.h  nbody_CPU_AltiVec.cpp  nbody_CPU_AltiVec.h  nbody_CPU_AltiVec_openmp.cpp  nbody_CPU_AltiVec_openmp.h  nbody_CPU_NEON.cpp  nbody_CPU_NEON_openmp.cpp  nbody_CPU_SIMD.h  nbody_CPU_SOA.cpp  nbody_CPU_SOA.h  nbody_CPU_SSE.cpp  nbody_CPU_SSE.h  nbody_CPU_SSE_openmp.cpp  nbody_CPU_SSE_openmp.h  nbody_CPU_SSE_threaded.cpp  nbody_CPU_SSE_threaded.h  nbody_GPU_AOS.cuh  nbody_GPU_AOS_const.cuh  nbody_GPU_AOS_tiled.cuh  nbody_GPU_AOS_tiled_const.cuh  nbody_GPU_Atomic.cuh  nbody_GPU_SOA_tiled.cuh  nbody_GPU_Shared.cuh  nbody_GPU_Shuffle.cuh  nbody_GPU_shared.cu  (+4 more)
nbody2/: bodybodyInteraction.cuh  bodybodyInteraction_AVX.h  bodybodyInteraction_FMA.h  bodybodyInteraction_SSE.h  nbody.cu  nbody.h  nbody_CPU_AOS.cpp  nbody_CPU_AOS.h  nbody_GPU_AOS.cuh
reduction/: CMakeLists.txt  reduction.cu  reduction1ExplicitLoop.cuh  reduction1Templated.cuh  reduction2Templated.cuh  reduction2WarpSynchronous.cuh  reduction3Templated.cuh  reduction3WarpSynchronousTemplated.cuh  reduction4SinglePass.cuh  reduction4Templated.cuh  reduction5Atomics.cuh  reduction5GlobalAtomics.cuh  reduction5Templated.cuh  reduction6AnyBlockSize.cuh  reduction6SharedAtomics.cuh  reduction7AnyBlockSize.cuh  reduction7SyncThreads.cuh  reductionTemplated.cu  (+5 more)
scan/: CMakeLists.txt
scan/int/: CMakeLists.txt  radixSort.cu  reduceBlock.cuh  scan2Level.cuh  scanBlock.cuh  scanFan.cuh  scanReduceThenScan.cuh  scanReduceThenScan_0.cuh  scanThrust.cuh  scanWarp.cuh  scanWarp2.cuh  scanZeroPad.cuh  streamCompact.cu  streamCompact_odd.cuh  testScan.cu  timeScan.cu  timeStreamCompact_odd.cu
scan/radixSort/: CMakeLists.txt  radixSort.cu
scan/streamCompact/: CMakeLists.txt  streamCompact_odd.cuh  testStreamCompact_odd.cu  timeStreamCompact_odd.cu
scan/warp/: CMakeLists.txt  scanBlock.cuh  scanWarp.cuh  scanWarp2.cuh  scanWarpShuffle.cuh  scanZeroPad.cuh  testScanBlock.cu  testScanWarp.cu
streaming/: CMakeLists.txt  saxpyCPU.h  saxpyGPU.cuh  stream1Async.cu  stream1Async.cubin  stream1Device.cu  stream2Async.cu  stream2Streams.cu  stream3Mapped.cu  stream3Streams.cu  stream4Mapped.cu  stream4MappedXfer.cu  stream5Mapped.cu  stream5MappedXfer.cu
texturing/: CMakeLists.txt  TextureDemoImage.ppm  surf1Dmemset.cu  surf2Dmemset.cu  surf2Dmemset_shmoo.cu  tex1d_9bit.cu  tex1d_addressing.cu  tex1d_unnormalized.cu  tex1dfetch.cu  tex1dfetch_big.cu  tex1dfetch_host.cu  tex1dfetch_htod.cu  tex1dfetch_int2float.cpp  tex1dfetch_int2float.cu  tex1dfetch_offset.cu  tex2d_addressing.cu  tex2d_addressing_device.cu  tex2d_memset.cu  tex2d_opengl.cu  tex2d_shmoo.cu
